0.8.3
  - Windows: update to libssh 0.10.5
  - scp_upload() now copies the file mode permissions similar to scp -p

0.8.2
  - Fix strict-prototypes warnings

0.8.1
  - Silence libssh deprecation warning about SCP (we still want to support it)

0.8.0
  - Windows/MacOS: update to libssh 0.9.5

0.7.0
  - Allow for @ in usernames in host spec
  - Print libssh version during CMD check
  - Bug fixes and maintenance thingies

0.6
  - Bugfix release: fix hardcoded string passwords

0.5
  - Import key management functions from the new 'credentials' package
  - Refactor password callback to avoid jumping on error
  - Fix a bug with reading the new openssh pem keys
  - Disconnect session immediately on startup/authentication errors
  - Raise a warning when the GC collects an ssh session which is still connected.
  - Rename ssh_info() to ssh_session_info()
  - ssh_tunnel() now closes listen port when interrupted while waiting

0.4:
  - Fix for security problem with latest openssh-server
  - Windows/Mac: update libssh to 0.8.6
  - Use new 'askpass' package for password and passphrase prompts
  - Use new ssh_session_is_known_server() api on libssh 0.8 and up
  - Fix bug that would write key to known_hosts for each connection
  - Add support for parsing ipv6 ip-address

0.3:
  - Windows/Mac: update libssh to 0.8.3
  - Fix GCC 8 compiler warnings
  - Don't use deprecated function on libssh 0.8+

0.2:
  - Initial release