@@ -1,6 +1,7 @@
 0.8.3
   - Windows: update to libssh 0.10.5
   - scp_upload() now copies the file mode permissions similar to scp -p
+  - ssh_session_info() now works for disconnected sessions
 
 0.8.2
   - Fix strict-prototypes warnings
